<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp"
    style="@style/size_1">

    <ProgressBar
        android:id="@+id/progress_detailMovies"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <ImageView
        android:id="@+id/img_poster"
        android:layout_marginTop="10dp"
        android:src="@color/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_item_imdb"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_item_imdb"
        app:layout_constraintStart_toEndOf="@+id/img_item_imdb"
        android:text="@string/imdb"
        android:maxLines="2"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_item_relase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/release"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_imdb"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_vote_count"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_relase"
        android:layout_marginTop="20dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:text="@string/vote_count"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_country"
        app:layout_constraintTop_toBottomOf="@+id/img_poster"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_popularity"
        app:layout_constraintTop_toBottomOf="@+id/tv_country"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_deskripsi"
        app:layout_constraintTop_toBottomOf="@+id/tv_popularity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/purple_500"
        android:text="@string/deskripsi_film"
        style="@style/size_2"/>

    <TextView
        android:id="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/txt_deskripsi"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/deskripsi_film"
        style="@style/size_2"/>



</androidx.constraintlayout.widget.ConstraintLayout>