<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorite.FavoriteFragment">


    <ProgressBar
        android:id="@+id/progress_favorite"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/items_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_show_tvshow"
        android:clickable="true"
        android:visibility="invisible"
        android:focusable="true"
        app:srcCompat="@drawable/ic_tv"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_showMovie"
        android:clickable="true"
        android:visibility="invisible"
        android:focusable="true"
        app:srcCompat="@drawable/ic_movies"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_show"
        android:clickable="true"
        android:visibility="visible"
        android:focusable="true"
        app:srcCompat="@drawable/ic_openmenu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>