...
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/language"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@id/img_poster"
...
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_item_showstar"
        app:layout_constraintStart_toEndOf="@+id/img_item_imdb"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_language"
        android:layout_marginTop="20dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
...
