<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/add_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite_border"
            app:showAsAction="ifRoom"
            android:iconTint="@color/white"
            />
    </group>
</menu>